--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,12 @@
   },
   "require": {
     "guzzlehttp/guzzle": "^6.0",
-    "symfony/console": "^3.0",
-    "symfony/yaml": "^3.0"
+    "silex/silex": "^2.2",
+    "symfony/console": "^4.0",
+    "symfony/finder": "^4.0",
+    "symfony/translation": "^4.0",
+    "symfony/twig-bridge": "^4.0",
+    "symfony/var-dumper": "^4.0",
+    "symfony/yaml": "^4.0"
   }
 }
