Add binary file.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,6 @@
     "symfony/twig-bridge": "^4.0",
     "symfony/var-dumper": "^4.0",
     "symfony/yaml": "^4.0"
-  }
+  },
+  "bin": ["bin/"]
 }
